Final edit of the notebook file

--- a/index.ipynb
+++ b/index.ipynb
@@ -1249,6 +1249,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Defining functions to be used in data cleaing: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 346,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to check for missing values\n",
+    "def sum_null_values_in_rows(df):\n",
+    "    # Calculate the sum of null values for each row\n",
+    "    null_values_count_per_row = df.isnull().sum()\n",
+    "    return null_values_count_per_row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 338,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#A function to calculate the percentage of missing values. \n",
+    "def missing_data_analysis(df):\n",
+    "    missing_percentage = df.isnull().mean() * 100\n",
+    "    return missing_percentage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 339,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#A function to calculate the summary statistics of a dataframe: \n",
+    "def summary_statistics(df):\n",
+    "    return df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Cleaning the movie_gross dataFrame"
    ]
   },
@@ -1495,7 +1538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [
     {
@@ -1510,15 +1553,14 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 250,
+     "execution_count": 347,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#A sum of null values in each row. \n",
-    "null_values_count = movie_basics.isnull().sum()\n",
-    "null_values_count"
+    "sum_null_values_in_rows(movie_basics)"
    ]
   },
   {
@@ -1545,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [
     {
@@ -1560,15 +1602,14 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 345,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Calcuating the percentage of null values in each column\n",
-    "null_percentage = (null_values_count/total_count) * 100\n",
-    "null_percentage"
+    "#Calcuating the percentage of null values in each column using a function:\n",
+    "missing_data_analysis(movie_basics)"
    ]
   },
   {
@@ -1604,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [
     {
@@ -1689,14 +1730,14 @@
        "max      2115.000000     51420.000000"
       ]
      },
-     "execution_count": 330,
+     "execution_count": 348,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Checking the new cleaned data frame\n",
-    "movie_basics.describe()"
+    "summary_statistics(movie_basics)"
    ]
   },
   {
@@ -1871,16 +1912,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 259,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# movie_info = pd.read_csv(\"data/rt_movie_info.tsv\", delimiter= \"\\t\")\n",
-    "# movie_info.head(5)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1916,7 +1947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [
     {
@@ -1928,20 +1959,19 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 349,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Checking for null values\n",
-    "null_count = movie_ratings.isnull().sum()\n",
-    "null_count"
+    "sum_null_values_in_rows(movie_ratings)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [
     {
@@ -2026,14 +2056,14 @@
        "max        10.000000  1.841066e+06"
       ]
      },
-     "execution_count": 333,
+     "execution_count": 350,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Summary statistics\n",
-    "movie_ratings.describe()"
+    "summary_statistics(movie_ratings)"
    ]
   },
   {
@@ -2174,7 +2204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [
     {
@@ -2277,14 +2307,14 @@
        "max     2019.000000       250.000000      10.000000  1.841066e+06"
       ]
      },
-     "execution_count": 335,
+     "execution_count": 351,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#A preview of the resutlting data frame\n",
-    "movies_df.describe()"
+    "summary_statistics(movies_df)"
    ]
   },
   {
@@ -2800,7 +2830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [
     {
@@ -2903,14 +2933,14 @@
        "max     2019.000000       250.000000      10.000000  1.841066e+06"
       ]
      },
-     "execution_count": 278,
+     "execution_count": 352,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Checking the statistical data\n",
-    "movies_df.describe()"
+    "summary_statistics(movies_df)"
    ]
   },
   {
