--- a/index.ipynb
+++ b/index.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Importation of libraries for the project"
+    "## Importation of libraries for the project"
    ]
   },
   {
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.1 Importing the gross movie csv file"
+    "### Importing the gross movie csv file"
    ]
   },
   {
