--- a/index.ipynb
+++ b/index.ipynb
@@ -477,7 +477,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 Importing the movie basics and movie gross data frames from the IM.db database file"
+    "### Importing the movie basics and movie gross data frames from the IM.db database file"
    ]
   },
   {
